syntax="proto3";

package proto;

message Item {
    int32 ID = 1;
    string Title = 2;
    string Description = 3;
    int32 UserID = 4;
}

message UserCredidentials {
    string Username = 1;
    string Password = 2;
}


message User {
    int32 ID = 1;
    string Username = 2;
    string FullName = 3;
    string Password = 4;
    repeated Item Items = 5;
}

service UserService {
    rpc CreateItem (CreateItemReq) returns (CreateItemRes);
    rpc GetItem (GetItemReq) returns (GetItemRes);
    rpc UpdateItem (UpdateItemReq) returns (UpdateItemRes);
    rpc DeleteItem (DeleteItemReq) returns (DeleteItemRes);

    rpc RefreshToken (RefreshTokenReq) returns (RefreshTokenRes);
    rpc CreateUser (CreateUserReq) returns (CreateUserRes);
    rpc Login (LoginUserReq) returns (LoginUserRes);
    rpc GetUser (GetUserReq) returns (GetUserRes);
    rpc UpdateUser (UpdateUserReq) returns (UpdateUserRes);
    rpc DeleteUser (DeleteUserReq) returns (DeleteUserRes);
}

message CreateItemReq {
    Item Item = 1;
}

message CreateItemRes {
    string Message = 1;
    int32 ID = 2;
}

message GetItemReq {
    int32 UserID = 1;
    int32 ID = 2;
    string Title = 3;
    string Description = 4;
}

message GetItemRes {
    repeated Item Item = 1;
    string Message = 2;
}

message UpdateItemReq {
    Item Item = 1;
}

message UpdateItemRes {
    Item Item = 1;
    string Message = 2;
}

message DeleteItemReq {
    int32 ID = 1;
}

message DeleteItemRes {
    string Message = 1;
}

message CreateUserReq {
    User User = 1;
}

message CreateUserRes {
    string Message = 1;
    int32 UserID = 2;
    string Token = 3;
    string RefreshToken = 4;
}

message GetUserReq {
    User User = 1;
}

message GetUserRes {
    repeated User Users = 1;
    string Message = 2;
}

message UpdateUserReq{
    User User = 1;
}

message UpdateUserRes {
    string Message = 1;
}

message DeleteUserReq{
    int32 ID = 1;
}

message DeleteUserRes {
    string Message = 1;
}

message LoginUserReq{
    UserCredidentials UserCredidentials = 1;
}

message LoginUserRes {
    string Token = 1;
    string RefreshToken = 2;
    int32 UserID = 3;
    string Message = 4;
}

message RefreshTokenReq{
    string RefreshToken = 2;
}

message RefreshTokenRes {
    string Token = 1;
    string RefreshToken = 2;
}